# llm-router

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm_router/: __init__.py  __main__.py  cache.py  draft.py  eval.py  filter.py  ollama.py  openrouter.py  pipeline.py  preprocess.py  request_log.py  router.py  semantic_cache.py  server.py  triage.py
tests/: test_cache.py  test_eval.py  test_filter.py  test_filter_live.py  test_preprocess.py  test_preprocess_code.py  test_router.py  test_semantic_cache.py  test_server.py  test_stream.py  test_triage.py
