[project]
name = "llm-router"
version = "0.1.0"
description = "Two-tier LLM cascade: local small model in front of hosted large models."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.ruff]
line-length = 100
target-version = "py311"
