[project]
name = "llm-router"
version = "0.1.0"
description = "Two-tier LLM cascade: local small model in front of hosted large models."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live tests hit the local Ollama server; skip them by default in CI.
addopts = "-m 'not live'"
markers = [
    "live: tests that require a running Ollama instance",
]
